--- a/src/components/tools/ThemeDisplay.css
+++ b/src/components/tools/ThemeDisplay.css
@@ -9,13 +9,11 @@
   margin: 0;
 }
 
-.ThemeDisplay > * {
-  border: 2px solid #000;
-  padding: 8px;
-}
-
 .ThemeDisplay_list {
   display: inline-flex;
   flex-direction: column;
   gap: 8px;
+  border: 2px solid #000;
+  padding: 8px;
+  height: min-content;
 }
