--- a/src/themes/MinimalRound/MenuItem.module.css
+++ b/src/themes/MinimalRound/MenuItem.module.css
@@ -9,18 +9,18 @@
   width: var(--item-size);
   height: var(--item-size);
   border-radius: 100%;
-  border: 1px solid #2c5364;
+  border: 1px solid var(--item-border-color);
   background: var(--background-gradient-top);
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 5px 5px 14px 1px rgba(0, 0, 0, 0.5);
+  box-shadow: 5px 5px 14px 1px var(--item-shadow-color);
 }
 
 .MenuItem.MenuItem_active .MenuItem_icon {
   background: var(--background-gradient-bottom);
-  border: 2px solid rgba(221, 221, 221, 0.7);
-  box-shadow: 0px 0px 20px 10px rgba(221, 221, 221, 0.5);
+  border: 2px solid var(--item-border-color-active);
+  box-shadow: 0px 0px 20px 10px var(--item-shadow-color-active);
 }
 
 .MenuItem .MenuItem_text {
@@ -30,6 +30,6 @@
   transform: translateX(-50%);
   /* poor man's font scaling */
   font-size: calc(var(--height) / 15);
-  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+  text-shadow: 2px 2px 5px var(--text-shadow-color);
   white-space: nowrap;
 }
