--- a/src/themes/MinimalRound/StartScreen.module.css
+++ b/src/themes/MinimalRound/StartScreen.module.css
@@ -5,5 +5,5 @@
   padding-top: calc(var(--height) / 5);
   /* poor man's font scaling */
   font-size: calc(var(--width) / 7.5);
-  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+  text-shadow: var(--text-shadow);
 }
