--- a/src/themes/MinimalRound/SingleItemScreen.module.css
+++ b/src/themes/MinimalRound/SingleItemScreen.module.css
@@ -2,14 +2,14 @@
   display: flex;
   justify-content: center;
   width: 100%;
-}
 
-.SingleItemScreen.centered {
-  height: 100%;
-  align-items: center;
-  transform: translateY(calc(-0.2 * var(--item-size)));
-}
+  &.centered {
+    height: 100%;
+    align-items: center;
+    transform: translateY(calc(-0.2 * var(--item-size)));
+  }
 
-.SingleItemScreen:not(.centered) {
-  transform: translateY(calc(-50% + 0.33 * var(--height)));
+  &:not(.centered) {
+    transform: translateY(calc(-50% + 0.33 * var(--height)));
+  }
 }
