--- a/src/themes/MinimalRoundGrid/MainMenu.module.css
+++ b/src/themes/MinimalRoundGrid/MainMenu.module.css
@@ -5,18 +5,18 @@
   align-items: center;
   justify-content: center;
   position: relative;
-}
 
-.MainMenu .MainMenu_grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: calc(var(--width) / 15);
-  transform: translateY(calc(-0.2 * (var(--width) / 7)));
-}
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: calc(var(--width) / 15);
+    transform: translateY(calc(-0.2 * (var(--width) / 7)));
+  }
 
-.MainMenu .MainMenu_label {
-  position: absolute;
-  bottom: calc(var(--height) * 0.075);
-  left: 50%;
-  transform: translateX(-50%);
+  .label {
+    position: absolute;
+    bottom: calc(var(--height) * 0.075);
+    left: 50%;
+    transform: translateX(-50%);
+  }
 }
