--- a/src/themes/MinimalRoundGrid/MenuItem.module.css
+++ b/src/themes/MinimalRoundGrid/MenuItem.module.css
@@ -8,15 +8,15 @@
   align-items: center;
   justify-content: center;
   box-shadow: 5px 5px 14px 1px var(--item-shadow-color);
-}
 
-.MenuItem.MenuItem_active {
-  background: var(--background-gradient-bottom);
-  border: 2px solid var(--item-border-color-active);
-  box-shadow: 0px 0px 20px 10px var(--item-shadow-color-active);
-}
+  &.active {
+    background: var(--background-gradient-bottom);
+    border: 2px solid var(--item-border-color-active);
+    box-shadow: 0px 0px 20px 10px var(--item-shadow-color-active);
+  }
 
-.MenuItem.MenuItem_large {
-  width: var(--item-size-large);
-  height: var(--item-size-large);
+  &.large {
+    width: var(--item-size-large);
+    height: var(--item-size-large);
+  }
 }
