--- a/src/themes/MinimalRoundGrid/SingleItemScreen.module.css
+++ b/src/themes/MinimalRoundGrid/SingleItemScreen.module.css
@@ -3,24 +3,24 @@
   justify-content: center;
   width: 100%;
   position: relative;
-}
 
-.SingleItemScreen.centered {
-  height: 100%;
-  align-items: center;
-}
+  &.centered {
+    height: 100%;
+    align-items: center;
+  }
 
-.SingleItemScreen:not(.centered) {
-  transform: translateY(calc(-50% + 0.33 * var(--height)));
-}
+  &:not(.centered) {
+    transform: translateY(calc(-50% + 0.33 * var(--height)));
 
-.SingleItemScreen .SingleItemScreen_label {
-  position: absolute;
-  bottom: calc(var(--height) * 0.075);
-  left: 50%;
-  transform: translateX(-50%);
-}
+    .label {
+      bottom: calc(var(--height) * -0.17);
+    }
+  }
 
-.SingleItemScreen:not(.centered) .SingleItemScreen_label {
-  bottom: calc(var(--height) * -0.17);
+  .label {
+    position: absolute;
+    bottom: calc(var(--height) * 0.075);
+    left: 50%;
+    transform: translateX(-50%);
+  }
 }
