--- a/src/themes/Hexaneon/components/Default.module.css
+++ b/src/themes/Hexaneon/components/Default.module.css
@@ -2,8 +2,18 @@
   background: var(--background-gradient);
   width: 100%;
   height: 100%;
+  position: relative;
 
-  & > * {
+  & > *:not(.scanlines) {
     filter: var(--screen-filter);
+  }
+
+  .scanlines {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: var(--scanlines);
   }
 }
