Added Minimal Round Grid Dark Cherry

--- a/src/themes/MinimalRoundGrid/components/Default.module.css
+++ b/src/themes/MinimalRoundGrid/components/Default.module.css
@@ -1,5 +1,5 @@
 .Default {
-  background: var(--background-gradient-top);
+  background: var(--background);
   color: var(--text-color);
   font-family: var(--font);
   width: 100%;
