--- a/src/themes/MinimalRound/components/MenuItem.module.css
+++ b/src/themes/MinimalRound/components/MenuItem.module.css
@@ -9,7 +9,7 @@
     height: var(--item-size);
     border-radius: 100%;
     border: 1px solid var(--item-border-color);
-    background: var(--background-gradient-top);
+    background: var(--item-background);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -17,7 +17,7 @@
   }
 
   &.active .icon {
-    background: var(--background-gradient-bottom);
+    background: var(--item-background-active);
     border: 2px solid var(--item-border-color-active);
     box-shadow: 0px 0px 20px 10px var(--item-shadow-color-active);
   }
