--- a/src/themes/MinimalRoundGrid/components/MenuItem.module.css
+++ b/src/themes/MinimalRoundGrid/components/MenuItem.module.css
@@ -3,14 +3,14 @@
   height: var(--item-size);
   border-radius: 100%;
   border: 1px solid var(--item-border-color);
-  background: var(--background-gradient-top);
+  background: var(--item-background);
   display: flex;
   align-items: center;
   justify-content: center;
   box-shadow: 5px 5px 14px 1px var(--item-shadow-color);
 
   &.active {
-    background: var(--background-gradient-bottom);
+    background: var(--item-background-active);
     border: 2px solid var(--item-border-color-active);
     box-shadow: 0px 0px 20px 10px var(--item-shadow-color-active);
   }
