--- a/src/themes/MinimalRoundGrid/components/MainMenu.module.css
+++ b/src/themes/MinimalRoundGrid/components/MainMenu.module.css
@@ -1,4 +1,6 @@
 .MainMenu {
+  --gap: calc(var(--width) / 15);
+  --vertical-offset: calc(-0.2 * (var(--width) / 7));
   width: 100%;
   height: 100%;
   display: flex;
@@ -9,14 +11,17 @@
   .grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: calc(var(--width) / 15);
-    transform: translateY(calc(-0.2 * (var(--width) / 7)));
+    gap: var(--gap);
+    transform: translateY(var(--vertical-offset));
   }
 
   .label {
     position: absolute;
-    bottom: calc(var(--height) * 0.075);
+    bottom: calc(
+      (var(--height) - (2 * var(--item-size)) - var(--gap)) / 4 -
+        var(--vertical-offset)
+    );
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, 50%);
   }
 }
