--- a/src/themes/MinimalRoundGrid/components/MenuItem.module.css
+++ b/src/themes/MinimalRoundGrid/components/MenuItem.module.css
@@ -2,7 +2,7 @@
   width: var(--item-size);
   height: var(--item-size);
   border-radius: 100%;
-  border: 1px solid var(--item-border-color);
+  outline: 1px solid var(--item-border-color);
   background: var(--item-background);
   display: flex;
   align-items: center;
@@ -11,7 +11,7 @@
 
   &.active {
     background: var(--item-background-active);
-    border: 2px solid var(--item-border-color-active);
+    outline: 2px solid var(--item-border-color-active);
     box-shadow: 0px 0px 20px 10px var(--item-shadow-color-active);
   }
 
