--- a/src/themes/MinimalRoundGridIcons/MenuItem.module.css
+++ b/src/themes/MinimalRoundGridIcons/MenuItem.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   border-radius: 100%;
-  border: 1px solid var(--item-border-color);
+  outline: 1px solid var(--item-border-color);
   background: var(--item-background);
   display: flex;
   align-items: center;
@@ -15,7 +15,7 @@
 
   &.active {
     background: var(--item-background-active);
-    border: 2px solid var(--item-border-color-active);
+    outline: 2px solid var(--item-border-color-active);
     box-shadow: 0px 0px 15px 10px var(--item-shadow-color-active);
   }
 }
