--- a/src/themes/MinimalRoundGrid/components/Default.module.css
+++ b/src/themes/MinimalRoundGrid/components/Default.module.css
@@ -1,7 +1,10 @@
 .Default {
-  background: var(--background);
   color: var(--text-color);
   font-family: var(--font);
   width: 100%;
   height: 100%;
+
+  &:not(.BackgroundHidden) {
+    background: var(--background);
+  }
 }
