--- a/src/themes/Fluent/components/Default.module.css
+++ b/src/themes/Fluent/components/Default.module.css
@@ -1,10 +1,21 @@
 .Default {
   color: var(--text-color);
   font-family: var(--font);
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
 
-  &:not(.BackgroundHidden) {
+  &.BackgroundShown {
     background: var(--background);
+  }
+
+  .header {
+    height: var(--header-height);
+    min-height: var(--header-height);
+    width: 100%;
+    background-color: var(--item-color);
+    border-bottom: 1px solid var(--item-border-color);
+    box-shadow: var(--shadow);
   }
 }
