--- a/src/themes/Fluent/components/MainMenu.module.css
+++ b/src/themes/Fluent/components/MainMenu.module.css
@@ -1,11 +1,27 @@
 .MainMenu {
-  .list {
-    --menu-padding: round(calc(var(--width) / 26.66), 1px);
-    position: absolute;
-    left: var(--menu-padding);
-    right: var(--menu-padding);
+  display: flex;
+  flex-direction: column;
+  gap: var(--item-grid-gap);
+  height: 100%;
+  padding: var(--padding);
+
+  .mainList {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: var(--item-grid-gap);
+
+    width: 100%;
+    height: 100%;
+  }
+
+  .miscListContainer {
     display: flex;
-    flex-direction: column;
-    gap: round(calc(var(--height) / 120), 1px);
+    justify-content: end;
+  }
+
+  .miscList {
+    display: flex;
+    flex-direction: row;
+    gap: var(--item-grid-gap);
   }
 }
