--- a/src/themes/Fluent/index.css
+++ b/src/themes/Fluent/index.css
@@ -1,39 +1,33 @@
 @font-face {
   font-family: "Selawik";
-  src: url("/fonts/selawkb.ttf") format("truetype");
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Selawik";
-  src: url("/fonts/selawk.ttf") format("truetype");
+  src: url("/fonts/Selawik/selawk.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Selawik Semilight";
-  src: url("/fonts/selawksl") format("truetype");
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
   font-family: "Selawik";
-  src: url("/fonts/selawkl.ttf") format("truetype");
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Selawik";
-  src: url("/fonts/selawksb.ttf") format("truetype");
+  src: url("/fonts/Selawik/selawksb.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
+}
+
+@font-face {
+  font-family: "NotoSansKR";
+  src: url("/fonts/NotoSansKR/NotoSansKR-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+  unicode-range: U+AC00-D7AF, U+1100-11FF;
+}
+
+@font-face {
+  font-family: "NotoSansKR";
+  src: url("/fonts/NotoSansKR/NotoSansKR-SemiBold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+  unicode-range: U+AC00-D7AF, U+1100-11FF;
 }
