Removed unnecessary header from muxlaunch images

--- a/src/themes/Fluent/components/Default.module.css
+++ b/src/themes/Fluent/components/Default.module.css
@@ -17,5 +17,9 @@
     background-color: var(--item-color);
     border-bottom: 1px solid var(--item-border-color);
     box-shadow: var(--shadow);
+
+    &.transparentHeader {
+      visibility: hidden;
+    }
   }
 }
